# ottosei

./: CMakeLists.txt  README.md  ottosei  ottosei.c
src/: CMakeLists.txt  ottosei.cpp
